--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,34 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+* {
+  box-sizing: border-box;
+  outline: none;
+  font-size: 16px;
+  text-decoration: none;
+  padding: 0;
+  margin: 0;
+}
+h2 {
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 1.5;
+  margin-bottom: 15px;
+}
+div {
+  margin-bottom: 20px;
+}
+button {
+  margin: 0 10px;
+  padding: 5px 10px;
 }
